# better-engine-control-software

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  better_engine_control_software  better_engine_control_software.cbp  build_docker.bat  build_docker.sh  cross_compile_ecs_pi_debug.sh  install_docker.sh  logger_pi2022-6-14_0-53-49.csv  main_pi.cpp  main_sim.cpp  main_tweak.cpp
AeroNU@raspberrypi.local/: CPackConfig.cmake  CPackSourceConfig.cmake  ecs_pi  (+1 more)
catch_tests/: CMakeLists.txt  README.md  RelatTimedSequenceTests.cpp  WatchDogTests.cpp  catch_runner.cpp
catch_tests/comm-boundary/: CMakeLists.txt  ECSNetworkerTests.cpp  IncomingJsonParsersTests.cpp  OutgoingJsonParsersTests.cpp  ParsingHelperTests.cpp  SocketLoggerTests.cpp
catch_tests/ecs/: CMakeLists.txt  StandECSTests.cpp
catch_tests/logger/: LoggerTests.cpp
catch_tests/phys-boundary/: CMakeLists.txt  CRCTests.cpp  FakeBoundaryTests.cpp  FakeECSValveTests.cpp  FakePacketSourceTests.cpp  LinearIntCalibratorTests.cpp  PackedStructTests.cpp  QuadraticIntCalibratorTests.cpp  SensorDataCalibratorTests.cpp
catch_tests/sequencer/: CMakeLists.txt  HangingSequenceTests.cpp  RelatTimedSequenceTests.cpp  SequencerTests.cpp
catch_tests/utils-and-constants/: BoundedIntTests.cpp  CMakeLists.txt  CommandDataTests.cpp  ECSUtilsTests.cpp  SensorDataTests.cpp  SensorDataUtilsTests.cpp  ThreadSafeQueueTests.cpp
catch_tests/watchdog/: AverageWatchDogTests.cpp  CMakeLists.txt  FakeBoundaryTests.cpp  FakeRedlineTests.cpp  FakeWatchDogTests.cpp  IntWithinRedlineTests.cpp  ValveWithinRedlineTests.cpp  WatchDogTests.cpp
src/: Boundary.cpp  Boundary.h  CMakeLists.txt  CommandData.cpp  CommandData.h  ECS.cpp  ECS.h  ECSPiValve.cpp  ECSState.cpp  ECSState.h  ECSThreeWayPiValve.cpp  ECSUtils.h  FakeBoundary.cpp  FakeBoundary.h  FakeRedline1.cpp  FakeRedline1.h  HorizontalECS.cpp  IBoundary.h  IECS.cpp  IntWithinRedline.cpp  IntWithinRedline.h  Logger.cpp  Logger.h  README.md  Redline.cpp  Redline.h  Redlines.h  RelatTimedSequence.cpp  SensorData.cpp  SensorData.h  Sequence.h  Sequencer.cpp  Sequencer.h  TeensyBoundary.cpp  ValveRedline.cpp  ValveRedline.h  WatchDog.cpp  WatchDog.h  WatchDogRedlines.h  Watchdog.cpp  (+7 more)
src/comm boundary/: ICommBoundary.h
src/comm-boundary/: CMakeLists.txt  ECSNetworker.cpp  ECSNetworker.h  FakeCommBoundary.cpp  FakeCommBoundary.h  GlobalCommBoundary.cpp  GlobalCommBoundary.h  ICommBoundary.h  IncomingJsonParsers.cpp  IncomingJsonParsers.h  OutgoingJsonParsers.cpp  OutgoingJsonParsers.h  ParsingHelpers.cpp  ParsingHelpers.h  SocketLogger.cpp  SocketLogger.h
src/comm-boundary/json/examples/client/: BEGIN.json
src/comm-boundary/json/examples/server/: DATA.json
src/comm-boundary/json_examples/: README.md
src/comm-boundary/json_examples/client/: FINISH.json  SETUP.json  SET_ACTIVE_ELEMENTS.json  SET_STATE.json
src/comm-boundary/json_examples/ecs_to_operator/: DATA.json  MESSAGE.json  REDLINE_REPORT.json  STATE.json
src/comm-boundary/json_examples/operator_to_ecs/: ABORT_SEQUENCE.json  SET_ACTIVE_ELEMENTS.json  SET_STATE.json  START_SEQUENCE.json
src/comm-boundary/json_examples/server/: DATA.json  READY.json  REDLINE_REPORT.json  STATE_TRANSITION.json  STOPPED.json
src/constants/: AllCalibrations.cpp  AllCalibrations.h  AllConstants.cpp  AllECSStates.h  AllSequences.h  CMakeLists.txt  HorizontalCalibrations.cpp  HorizontalCalibrations.h  HorizontalECSStates.cpp  HorizontalECSStates.h  Strings.cpp  Strings.h
src/ecs/: CMakeLists.txt  ECSCommand.h  FakeECS.cpp  FakeECS.h  HorizontalECS.cpp  HorizontalECS.h  IECS.h  IECSCommand.h  IECSHighCommand.h  MessageStructs.cpp  MessageStructs.h  StandECS.cpp  StandECS.h
src/logger/: CMakeLists.txt  ILogger.h  Logger.cpp  Logger.h  Strings.cpp
src/phys boundary/: FakeBoundary.cpp  FakeBoundary.h
src/phys boundary/valves/: ECSPiValve.cpp
src/phys-boundary/: CMakeLists.txt  FakeBoundary.cpp  FakeBoundary.h  IPhysicalBoundary.h  PiUtils.h  TeensyBoundary.cpp  TeensyBoundary.h
src/phys-boundary/calibrators/: CMakeLists.txt  IntCalibrator.cpp  IntCalibrator.h  LinearIntCalibrator.cpp  LinearIntCalibrator.h  QuadraticIntCalibrator.cpp  QuadraticIntCalibrator.h  SensorDataCalibrator.cpp  SensorDataCalibrator.h
src/phys-boundary/packet-sources/: ADCPacketSource.cpp  ADCPacketSource.h  CMakeLists.txt  CrcChecking.h  DummySource.cpp  FakeIPacketSource.h  FakePacketSource.h  IPacketSource.h  PiUtils.h  PropBoardSource.cpp  PropBoardSource.h  SerialPortSource.h  TeensyPacketSource.cpp  TeensyPacketSource.h
src/phys-boundary/valves/: CMakeLists.txt  ECSPiValve.cpp  ECSPiValve.h  ECSThreeWayPiValve.cpp  ECSThreeWayPiValve.h  EffectorException.h  FakeECSPiValve.cpp  FakeECSPiValve.h  FakeECSValve.cpp  FakeECSValve.h  IECSValve.h
src/sequencer/: CMakeLists.txt  ISequence.h  RelatTimedSequence.cpp  RelatTimedSequence.h  Sequencer.cpp  Sequencer.h
src/sequencer/sequences/: CMakeLists.txt  HangingSequence.cpp  HangingSequence.h  ISequence.h  RelatTimedSequence.cpp  RelatTimedSequence.h
src/util/: consts.cpp  consts.h  structs.cpp  structs.h  utils.cpp  utils.h
src/utils/: BoundedInt.h  CMakeLists.txt  CommandData.h  ECSState.cpp  ECSState.h  ECSUtils.cpp  ECSUtils.h  SensorData.cpp  SensorData.h  SensorDataUtils.cpp  SensorDataUtils.h  ThreadQueue.h  consts.h
src/utils-and-constants/: CMakeLists.txt  CommandData.h  ECSState.cpp  ECSState.h  ECSUtils.cpp  ECSUtils.h  HoriECSRedlinesAndStates.cpp  HoriECSStates.cpp  HorizontalECSRedlines.cpp  HorizontalECSRedlines.h  HorizontalECSStates.cpp  HorizontalECSStates.h  PiUtils.h  SensorData.h  ThreadQueue.h  consts.cpp  structs.h
src/watchdog/: AverageWatchDog.cpp  AverageWatchDog.h  CMakeLists.txt  FakeWatchDog.cpp  FakeWatchDog.h  IRedline.h  IWatchDog.h  IntWithinRedline.cpp  IntWithinRedline.h  ValveRedline.cpp  ValveRedline.h  WatchDog.cpp  WatchDog.h
src/watchdog/redlines/: CMakeLists.txt  FakeRedline.cpp  FakeRedline.h  IRedline.h  IntWithinRedline.cpp  IntWithinRedline.h  RedlineResponsePacket.cpp  RedlineResponsePacket.h  ValveRedline.cpp  ValveRedline.h
(+77 files in other folders)
